# occt-native-2.0

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  FIX_PLAN.md  IMPROVEMENT_ROADMAP.md  LICENSE  README.md  THIRD_PARTY_LICENSES.txt  vcpkg.json  히스토리.rtf
.claude/rules/: ci-rules.md  engine-rules.md  gui-rules.md  sensor-rules.md  updater-rules.md
.claude/skills/occt-dev/: SKILL.md  checklist.md
.github/workflows/: build-windows.yml  build.yml  cpu-deep-test.yml  gpu-test.yml  gui-smoke-test.yml  windows-test.yml
docs/: CODE_STRUCTURE.md  OCCT-COMPARISON-ANALYSIS.md
resources/: occt_native.manifest  occt_native.qrc
resources/styles/: dark_theme.qss
scripts/: build-windows.bat  build_linux.sh  build_windows.bat  package-portable.ps1
src/: config.h.in  main.cpp
src/api/: CMakeLists.txt  cert_store.cpp  cert_store.h
src/benchmark/: CMakeLists.txt  leaderboard.cpp  leaderboard.h
src/certification/: CMakeLists.txt  cert_generator.cpp  cert_generator.h  certificate.h
src/cli/: CMakeLists.txt  cli_args.cpp  cli_args.h  cli_runner.cpp  cli_runner.h
src/engines/: CMakeLists.txt  base_engine.h  cpu_engine.cpp  cpu_engine.h  gpu_engine.cpp  gpu_engine.h  psu_engine.cpp  psu_engine.h  ram_engine.cpp  ram_engine.h  storage_engine.cpp  storage_engine.h
src/engines/benchmark/: cache_benchmark.cpp  cache_benchmark.h  memory_benchmark.cpp  memory_benchmark.h
src/engines/cpu/: avx_stress.cpp  avx_stress.h  error_verifier.cpp  error_verifier.h  linpack.cpp  linpack.h  prime.cpp  prime.h
src/engines/gpu/: artifact_detector.cpp  artifact_detector.h  multi_gpu_manager.cpp  multi_gpu_manager.h  opencl_backend.cpp  opencl_backend.h  vulkan_backend.cpp  vulkan_backend.h  vulkan_renderer.cpp  vulkan_renderer.h
src/engines/gpu/kernels/: stress_fp32.cl  stress_fp64.cl  vram_test.cl
src/engines/gpu/shaders/: stress.vert  stress_l1.frag  stress_l2.frag  stress_l3.frag  stress_l4.frag  stress_l5.frag  stress_shaders.h
src/engines/storage/: storage_verify.cpp  verify_block.h
src/gui/: CMakeLists.txt  main_window.cpp  main_window.h
src/gui/dialogs/: token_dialog.cpp  token_dialog.h
src/gui/panels/: benchmark_panel.cpp  benchmark_panel.h  certificate_panel.cpp  certificate_panel.h  cpu_panel.cpp  cpu_panel.h  dashboard_panel.cpp  dashboard_panel.h  gpu_panel.cpp  gpu_panel.h  monitor_panel.cpp  monitor_panel.h  panel_styles.h  psu_panel.cpp  psu_panel.h  ram_panel.cpp  ram_panel.h  results_panel.cpp  results_panel.h  schedule_panel.cpp  schedule_panel.h  storage_panel.cpp  storage_panel.h  sysinfo_panel.cpp  sysinfo_panel.h
src/gui/widgets/: circular_gauge.cpp  circular_gauge.h  realtime_chart.cpp  realtime_chart.h
src/monitor/: CMakeLists.txt  lhm_bridge.cpp  lhm_bridge.h  sensor_manager.cpp  sensor_manager.h  sensor_model.cpp  sensor_model.h  system_info.cpp  system_info.h  whea_monitor.cpp  whea_monitor.h
src/report/: CMakeLists.txt  csv_exporter.cpp  csv_exporter.h  html_report.cpp  html_report.h  png_report.cpp  png_report.h  report_comparator.cpp  report_comparator.h  report_manager.cpp  report_manager.h
src/safety/: CMakeLists.txt  guardian.cpp  guardian.h
src/scheduler/: CMakeLists.txt  preset_schedules.cpp  preset_schedules.h  test_scheduler.cpp  test_scheduler.h  test_step.h
src/updater/: CMakeLists.txt  log_uploader.cpp  log_uploader.h  post_update_runner.cpp  post_update_runner.h  update_checker.cpp  update_checker.h  update_dialog.cpp  update_dialog.h  update_downloader.cpp  update_downloader.h  update_installer.cpp  update_installer.h
src/utils/: CMakeLists.txt  app_config.cpp  app_config.h  cpuid.cpp  cpuid.h  crc32.cpp  crc32.h  file_logger.cpp  file_logger.h  gpu_info.cpp  gpu_info.h  portable_paths.cpp  portable_paths.h  secure_token_store.cpp  secure_token_store.h
tests/: CMakeLists.txt  ci-gpu-schedule.json  ci-schedule.json  test_bugfix  test_bugfix_review.cpp  test_phase1  test_phase1_bugfixes.cpp  test_phase2  test_phase2_features.cpp  test_phase3  test_phase3_features.cpp  test_phase4  test_phase4_features.cpp  test_storage  test_storage_verify  test_storage_verify.cpp  test_storage_verify_new  test_test_bugfix_review  test_test_phase1_bugfixes  test_test_phase2_features  test_test_phase3_features  test_test_phase4_features
tools/lhm-sensor-reader/: Program.cs  lhm-sensor-reader.csproj
